# AlgoLab

./: .gitignore  CMakeLists.txt  README.md  benchmarkAlt.csv  benchmarkAlt2.csv
src/: CMakeLists.txt  main.cpp  testUtils.hpp
src/algorithms/: algorithms.hpp  heapsort.hpp  insertionsort.hpp  mergesort.hpp  quicksort.hpp
src/benchmarks/: benchmark.h  benchmark.hpp  dataset.h  dataset.hpp
src/tests/: heapsort_tests.cpp  insertionsort_inBound_tests.cpp  insertionsort_normal_tests.cpp  insertionsort_withGuardCacheMiss.cpp  insertionsort_withGuardCacheMiss_tests.cpp  insertionsort_withGuardCacheOp.cpp  insertionsort_withGuardCacheOp_tests.cpp  mergesort_bottomUp_tests.cpp  mergesort_natural_tests.cpp  quicksort_hybridElse_tests.cpp  quicksort_hybridIf_tests.cpp  quicksort_quicksort_tests.cpp  testCases.hpp
